@@ -16,12 +16,15 @@
 package org.uncommons.maths.demo;
 
 import java.awt.BorderLayout;
-import java.awt.FlowLayout;
+import java.awt.Cursor;
+import java.awt.Dimension;
 import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
 import java.util.Map;
 import java.util.Random;
 import javax.swing.BorderFactory;
+import javax.swing.Box;
+import javax.swing.BoxLayout;
 import javax.swing.JButton;
 import javax.swing.JComponent;
 import javax.swing.JFrame;
@@ -29,8 +32,11 @@ import javax.swing.JLabel;
 import javax.swing.JPanel;
 import javax.swing.JSpinner;
 import javax.swing.SpinnerNumberModel;
+import javax.swing.SpringLayout;
 import javax.swing.SwingUtilities;
+import javax.swing.JComboBox;
 import org.uncommons.maths.random.MersenneTwisterRNG;
+import org.uncommons.swing.SpringUtilities;
 import org.uncommons.swing.SwingBackgroundTask;
 
 /**
@@ -49,28 +55,37 @@ public class RandomDemo extends JFrame
     {
         super("Uncommons Maths - Random Numbers Demo");
         setLayout(new BorderLayout());
-        add(createControls(), BorderLayout.NORTH);
+        add(createControls(), BorderLayout.WEST);
         add(graphPanel, BorderLayout.CENTER);
         setDefaultCloseOperation(JFrame.EXIT_ON_CLOSE);
         setSize(800, 600);
+        setMinimumSize(new Dimension(480, 320));
         validate();
     }
 
 
     private JComponent createControls()
     {
-        JPanel controls = new JPanel(new BorderLayout());
-        controls.add(distributionPanel, BorderLayout.CENTER);
+        Box controls = new Box(BoxLayout.Y_AXIS);
+        controls.add(distributionPanel);
 
-        JPanel execution = new JPanel(new FlowLayout(FlowLayout.LEFT));
-        execution.add(new JLabel("Iterations: "));
+        JPanel execution = new JPanel(new SpringLayout());
+        JComboBox rngCombo = new JComboBox();
+        rngCombo.addItem("Mersenne Twister");
+        execution.add(rngCombo);
+        execution.add(new JLabel("No. Values: "));
         final SpinnerNumberModel iterationsNumberModel = new SpinnerNumberModel(10000, 10, 1000000, 100);
-        execution.add(new JSpinner(iterationsNumberModel));
+        execution.add(new JSpinner(iterationsNumberModel));        
+        execution.setBorder(BorderFactory.createTitledBorder("RNG"));
+        SpringUtilities.makeCompactGrid(execution, 3, 1, 6, 6, 6, 6);
+        controls.add(execution);
+
         JButton executeButton = new JButton("Go");
         executeButton.addActionListener(new ActionListener()
         {
             public void actionPerformed(ActionEvent actionEvent)
             {
+                RandomDemo.this.setCursor(Cursor.getPredefinedCursor(Cursor.WAIT_CURSOR));
                 new SwingBackgroundTask<GraphData>()
                 {
                     private ProbabilityDistribution distribution;
@@ -96,13 +111,12 @@ public class RandomDemo extends JFrame
                                                  data.getExpectedMean(),
                                                  data.getExpectedStandardDeviation(),
                                                  distribution.isDiscrete());
+                        RandomDemo.this.setCursor(Cursor.getPredefinedCursor(Cursor.DEFAULT_CURSOR));
                     }
                 }.execute();
             }
         });
-        execution.add(executeButton);
-        execution.setBorder(BorderFactory.createTitledBorder("Execution"));
-        controls.add(execution, BorderLayout.EAST);
+        controls.add(executeButton);
         return controls;
     }
 
